# sudoku-solver

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  index.html  script.js  simple-grid.html  style.css
include/: board_detector.h  cell_extractor.h  digit_recognizer.h  digit_segmenter.h  grid_cleaner.h  image_intake_service.h  image_processor.h  image_quality_analyzer.h  sudoku_solver.h  vision_pipeline.h
src/: board_detector.cpp  cell_extractor.cpp  digit_recognizer.cpp  digit_segmenter.cpp  grid_cleaner.cpp  image_intake_service.cpp  image_processor.cpp  image_quality_analyzer.cpp  main.cpp  server.cpp  sudoku_solver.cpp  vision_pipeline.cpp
